--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -28,7 +28,9 @@ spec:
       workingDir: $(workspaces.source.path)
       script: |
         #git clone https://github.com/paichayon321/tekton-pipeline.git
+        echo $(workspaces.secret.path)
         GIT_CREDS_USR=$(cat $(workspaces.secret.path)/user)
+        echo $GIT_CREDS_USR
         GIT_CREDS_PSW=$(cat $(workspaces.secret.path)/token)
         git clone https://$(GIT_CREDS_USR):$(GIT_CREDS_PSW)@github.com/paichayon321/tekton-pipeline.git
         cd tekton-pipeline
