--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -43,8 +43,7 @@ spec:
         yq -i '.spec.template.spec.containers[0].image = "tretre:xxx"' /workspace/source/tekton-pipeline/app/myapp/env/dev/deployment.yaml
         #cat tekton-pipeline/app/myapp/env/dev/deployment.yaml
         #yq -i '.spec.template.spec.containers[0].image = "'''+image_name_tag+'''"' prescreening/backend/openshift/environment/'''+environment+'''/deployment.yaml
-        #git add prescreening/backend/openshift/environment/'''+environment+'''/deployment.yaml
-        #git commit -m 'update image '''+image_name_tag+''' on '''+environment+''' environment'
-        #git push https://${GIT_CREDS_USR}:${GIT_CREDS_PSW}@192.168.77.24/devops/platform.git HEAD:main.   
+        git add /workspace/source/tekton-pipeline/app/myapp/env/dev/deployment.yaml
+        git commit -m 'update image'
+        git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main.   
 
-        sleep infinity
