--- a/app/myapp/env/dev/deployment.yaml
+++ b/app/myapp/env/dev/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: myapp
           image: >-
-            tretre:xxx
+            spring-web-quickstart:c07bf64
           ports:
             - containerPort: 8080
               protocol: TCP
