--- a/app/myapp/env/dev/deployment.yaml
+++ b/app/myapp/env/dev/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: myapp
           image: >-
-            spring-web-quickstart:c07bf64
+            default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd/spring-web-quickstart:be4c1ed
           ports:
             - containerPort: 8080
               protocol: TCP
