--- a/app/myapp/env/dev/deployment.yaml
+++ b/app/myapp/env/dev/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: myapp
           image: >-
-            default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd/spring-web-quickstart:be4c1ed
+            image-registry.openshift-image-registry.svc:5000/cicd/spring-web-quickstart:007b5c1
           ports:
             - containerPort: 8080
               protocol: TCP
