--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -233,6 +233,8 @@ spec:
           value: $(params.git_repo_name)
         - name: image_repo_url
           value: default-route-openshift-image-registry.apps.524vf.dynamic.opentlc.com/cicd
+        - name: environment
+          value: $(tasks.initial-info.results.environment)
         - name: IMAGE
           value: default
         - name: BUILDER_IMAGE
