--- a/app/myapp/env/dev/deployment.yaml
+++ b/app/myapp/env/dev/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: myapp
           image: >-
-            image-registry.openshift-image-registry.svc:5000/cicd/spring-web-quickstart:926d110
+            image-registry.openshift-image-registry.svc:5000/cicd/spring-web-quickstart:1.5
           ports:
             - containerPort: 8080
               protocol: TCP
