--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -34,6 +34,22 @@ spec:
       image: docker.io/paichayon1/multitools:ubi7
       workingDir: $(workspaces.source.path)
       script: |
+        echo "####################"
+        echo $(params.environment)
+        echo "####################"
+        if [[ $(params.environment) == dev || $(params.environment) == tags  ]]; then
+          deploy_env=
+        fi
+
+        if [[ $(params.environment) == dev ]]; then
+            deploy_env=dev
+        elif [[ $(params.environment) == tags ]]; then
+            deploy_env=sit
+        else
+            exit 1
+        fi  
+
+
         GIT_CREDS_USR=$(cat $(workspaces.secret.path)/user)
         GIT_CREDS_PSW=$(cat $(workspaces.secret.path)/token)
         git clone https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git
@@ -41,8 +57,8 @@ spec:
         git checkout origin/main
         git config --global user.name "tekton_pipeline"
         git config --global user.email "tektonPipeline@domain.local"
-        yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' /workspace/source/tekton-pipeline/app/myapp/env/dev/deployment.yaml
-        git add /workspace/source/tekton-pipeline/app/myapp/env/dev/deployment.yaml
+        yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' /workspace/source/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
+        git add /workspace/source/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
         git commit -m 'update image'
         git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main   
 
