--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -57,6 +57,6 @@ spec:
         git config --global user.email "tektonPipeline@domain.local"
         yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' /workspace/source/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
         git add /workspace/source/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
-        git commit -m 'update image $(params.git_repo_name):$(params.image_tag) on $deploy_env'
+        git commit -m 'update image $(params.git_repo_name):$(params.image_tag) on "$deploy_env"'
         git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main   
 
