--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -16,8 +16,8 @@ spec:
   description: >-
     update-manifest-task
   workspaces:
-    - name: source
-      description: Workspace containing the code
+    - name: temp
+      description: Workspace for temporary
     - name: secret
       description: GITHUB PAT secret - user and token 
   steps:
@@ -33,7 +33,7 @@ spec:
         - name: deploy_env
       name: clone-platform-repo
       image: docker.io/paichayon1/multitools:ubi7
-      workingDir: $(workspaces.source.path)
+      workingDir: $(workspaces.temp.path)
       script: |
         echo "####################"
         echo $(params.environment)
@@ -55,8 +55,8 @@ spec:
         git checkout origin/main
         git config --global user.name "tekton_pipeline"
         git config --global user.email "tektonPipeline@domain.local"
-        yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' /workspace/source/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
-        git add /workspace/source/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
+        yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' /workspace/temp/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
+        git add /workspace/temp/tekton-pipeline/app/myapp/env/$deploy_env/deployment.yaml
         git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
         git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main   
 
