--- a/cicd/pipeline/argoCD-Sync.yaml
+++ b/cicd/pipeline/argoCD-Sync.yaml
@@ -33,6 +33,12 @@ spec:
     - default: v2.2.2
       name: argocd-version
       type: string
+  stepTemplate:
+    envFrom:
+      - configMapRef:
+          name: argocd-env-configmap  # used for server address
+      - secretRef:
+          name: argocd-env-secret  # used for authentication (username/password or auth token)
   steps:
     - image: 'quay.io/argoproj/argocd:$(params.argocd-version)'
       name: login
@@ -45,8 +51,8 @@ spec:
       resources: {}
       script: >
         if [ -z "$ARGOCD_AUTH_TOKEN" ]; then
-          #yes | argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD";
-          yes | argocd login "openshift-gitops-server-openshift-gitops.apps.524vf.dynamic.opentlc.com:443" --username="admin" --password="Fs93pCDeGZmHyOn4BtvJqEPIkMbLrf60";
+          yes | argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD";
+          #yes | argocd login "openshift-gitops-server-openshift-gitops.apps.524vf.dynamic.opentlc.com:443" --username="admin" --password="Fs93pCDeGZmHyOn4BtvJqEPIkMbLrf60";
           
         fi
 
