--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -49,9 +49,10 @@ spec:
           yes | argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD";
           
         fi
+
         appname=$(params.application-name)-$(params.environment)
-        argocd app sync "$appname" --revision
-        "$(params.revision)" "$(params.flags)"
+
+        argocd app sync "$appname" --revision "$(params.revision)" "$(params.flags)"
 
         argocd app wait "$appname" --health "$(params.flags)"
       workingDir: $(workspaces.temp.path)
