--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -52,9 +52,12 @@ spec:
 
         appname=$(params.application-name)-$(params.environment)
 
-        argocd app sync "$appname" --revision "$(params.revision)" "$(params.flags)"
+        argocd app sync "$appname" --revision "$(params.revision)"
+
         sleep 20
-        argocd app wait "$appname" --health "$(params.flags)"
+
+        argocd app wait "$appname" --health
+        
       workingDir: $(workspaces.temp.path)
   workspaces:
     - name: temp
