--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -45,14 +45,11 @@ spec:
       name: login
       resources: {}
       script: >
-        if [ -z "$ARGOCD_AUTH_TOKEN" ]; then
-          yes | argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD" --insecure;
-          
-        fi
+        argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD" --insecure
 
-        appname=$(params.application-name)-$(params.environment)
+        #appname=$(params.application-name)-$(params.environment)
 
-        argocd app sync "$appname" --revision main
+        #argocd app sync "$appname" --revision main
 
         #argocd app sync "$appname" --revision "$(params.revision)"
 
