--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -48,6 +48,8 @@ spec:
         argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD" --insecure
 
         #appname=$(params.application-name)-$(params.environment)
+        
+        argocd app sync myapp-uat
 
         #argocd app sync "$appname" --revision main
 
