--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -41,7 +41,8 @@ spec:
       - secretRef:
           name: argocd-env-secret  # used for authentication (username/password or auth token)
   steps:
-    - image: 'quay.io/argoproj/argocd:$(params.argocd-version)'
+#    - image: 'quay.io/argoproj/argocd:$(params.argocd-version)'
+    - image: docker.io/paichayon1/multitools:ubi7
       name: login
       resources: {}
       script: |
