--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -48,7 +48,7 @@ spec:
       script: |
         argocd login "$ARGOCD_SERVER" --username="$ARGOCD_USERNAME" --password="$ARGOCD_PASSWORD" --insecure
 
-        #appname=$(params.application-name)-$(params.environment)
+        appname=$(params.application-name)-$(params.environment)
         
         argocd app --help
 
